--- a/resume/冷熊简历.MD
+++ b/resume/冷熊简历.MD
@@ -1,29 +1,29 @@
 
 # **应聘 Web 前端**
 
- - 康康 / 男 / 1994 
-  - 手机：176-8210-4004
+- 陈康康 / 男 / 1994 
+- 手机：176-8210-4004
 - Email：ch.kang@outlook.com
 - QQ：574682566
- - 大专 / 芜湖职业技术学院 / 计算机应用技术 
+- 大专 / 芜湖职业技术学院 / 计算机应用技术 
 
       
 ## 技能清单
-  ### <span style="color:#06c7f9">HTML/CSS/DOM</span>
-   - 熟练掌握 **HTML5**，如语义化标签、离线存储、⾳频、视频等。能快速构建符合 **W3C 标准**并兼容主流浏览器的⻚⾯;
-- 熟悉 **CSS** 常⻅选择器与布局⽅案以及盒模型，如 **flexbox float position** 等，能精准还原设计稿，实现响应式设计;
+### <span style="color:#06c7f9">HTML/CSS/DOM</span>
+- 熟练掌握 **HTML5**，如语义化标签、离线存储、音频、视频等。能快速构建符合 **W3C 标准**并兼容主流浏览器的页面;
+- 熟悉 **CSS** 常见选择器与布局方案以及盒模型，如 **flexbox float position** 等，能精准还原设计稿，实现响应式设计;
 - 熟练掌握 **DOM**，熟练运用原生 **JavaScript** 对 **HTML** 页面进行页面元素的操作、实现事件绑定等，掌
 握事件委托、事件冒泡、事件传播的原理;
- ### <span style="color:#06c7f9">ECMAScript(JavaScript)</span>
-   - 掌握原生 JavaScript 语法，能在项目中熟练使用;
-   - 熟练掌握原生 **ES6** 特性，如模板字符串、箭头函数、默认参数、**Class，Promise** 等;
-  ### <span style="color:#06c7f9">主流框架</span>
-   - 熟练掌握 **React** 技术栈，如 **React 组件通信、React-Router 和 React Context 状态管理**; 对 **diff** 算法有深⼊理解，掌握 **SSR** 原理及实现，能在⼯作中快速运⽤;
-   - 熟练掌握 **Vue** 技术栈及其原理，且能快速搭建 Vue 开发环境，掌握**vue-template**源码实现;
-   - 熟练掌握 **微信⼩程序**, **钉钉微应用** 等以及一端编译多端发布类框架 **Taro** 等 ; 
-   - 熟练掌握 **Webpack** 原理，实现过 **Webpack** 核⼼功能，对 **loader** 和 **plugin** 有深⼊理解，能根据项⽬需求开发相应的 **loader** 和 **plugin** 解决问题，能提升现有 **Webpack** 项⽬的开发效率与开发体验;
-   - 掌握**流(stream)** 和 **gulp** 原理，具备开发自定义插件解决项目问题的能力
-- 掌握**类**与**⾯向对象**的编程思想，具备在⼯作中**封装、优化、重构**项⽬代码的能⼒,  项目中**抽象， 复用**各类组件，具备良好的编码⻛格，严格按照规范进⾏编码;
+### <span style="color:#06c7f9">ECMAScript(JavaScript)</span>
+- 掌握原生 JavaScript 语法，能在项目中熟练使用;
+- 熟练掌握原生 **ES6** 特性，如模板字符串、箭头函数、默认参数、**Class，Promise** 等;
+### <span style="color:#06c7f9">主流框架</span>
+- 熟练掌握 **React** 技术栈，如 **React 组件通信、React-Router 和 React Context 状态管理**; 对 **diff** 算法有深⼊理解，掌握 **SSR** 原理及实现，能在工作中快速运用;
+- 熟练掌握 **Vue** 技术栈及其原理，组件间通信,路由管理,且能快速搭建 Vue 开发环境，掌握 **vue-template** 源码实现;
+- 熟练掌握 **微信小程序**, **钉钉微应用** 等以及一端编译多端发布类框架 **Taro**, **uniapp**  等 ; 
+- 熟练掌握 **Webpack** 原理，实现过 **Webpack** 核心功能，对 **loader** 和 **plugin** 有深入理解，能根据项目需求开发相应的 **loader** 和 **plugin** 解决问题，能提升现有 **Webpack** 项目的开发效率与开发体验;
+- 掌握**流(stream)** 和 **gulp** 原理，具备开发自定义插件解决项目问题的能力
+- 掌握**类**与**面向对象**的编程思想，具备在工作中**封装、优化、重构**项目代码的能力,  项目中**抽象， 复用**各类组件，具备良好严谨的编码风格，严格按照规范进行编码;
 - 掌握**问题分析和代码调试**能力以及项目**需求分析与拆分**能力，熟练掌握 **git 分支管理**，能快速带领组员分工协作完成各类常见需求;
 
 
@@ -31,13 +31,29 @@
     
 # 工作经历
 
-## 杭州钛和科技有限公司 （ 2018年6月 ~ 至今 ）互联网研发中心 前端组长
+## 恒晟图文(杭州)有限公司 （ 2018年6月 ~ 至今 ）互联网研发中心 前端组长
+独立负责公司多个前端项⽬的开发，维护。包括多个后台管理，微信⼩程序，官⽹，商城, 大屏数据可视化, ⼿机端H5项⽬等
 
-### DEF项目 
-我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
+### 在线商城 
+#### vue, vue-router, element-ui
+商城系统联动ERP
+- 包含商品 sku 展示, 商品列表瀑布流展示, 商品加购收藏
+- 客户注册, 登录, 选购商品, 商品估价下单后发送提醒到门店 ERP 端
+- 像素级还原设计稿, 交互过程添加动画丰富体验, 页面响应式布局
+
+### 商城小程序 
+dududududdu
+
+### 大屏可视化项目 
+dududududdu
 
 
-### GHI项目 
+
+### 每日疫情播报
+#### node, react, react-router, antd-mobile 
+使用 node 每天定时爬虫获取丁香医生丁香园, 新浪微博, 腾讯新闻等公开疫情数据, 处理后部署到公司内部活动页面, 提醒客户和员工重点疫情区域以及各项安全提示
+
+### 在线项目 
 我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
 
 
@@ -46,7 +62,7 @@
 （每个公司写2~3个核心项目就好了，如果你有非常大量的项目，那么按分类进行合并，每一类选一个典型写出来。其他的一笔带过即可。）
 
   
-## 杭州宝威实业投资有限公司 （ 2015年4月 ~ 2016年3月 ）网络工程师
+## 杭州宝威实业投资有限公司 （ 2015年5月 ~ 2016年3月 ）网络工程师
 
 ### MNO项目 
 我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
@@ -55,6 +71,9 @@
 ### PQR项目 
 我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
 
+
+## 武警北京总队四支队 （ 2012年12月 ~ 2014年12月 ）上等兵 
+重大活动安保, 目标警卫等, 服役期间表现优秀, 获得优秀士兵, 嘉奖等
 
 ### 其他项目
 
@@ -68,6 +87,6 @@
     
     
 ---      
-# 致谢
-感谢您花时间阅读我的简历，期待能有机会和您共事。
+## 致谢
+感谢您花时间阅读我的简历，很期待能有机会和您共事。
       
